Quiet unauthenticated API noise and clear compile errors.
Protected pages now send session credentials and skip those calls until login succeeds, while TypeScript/ESLint errors from the cleanup are fixed.

Co-authored-by: Cursor <cursoragent@cursor.com>